# mtv_app

./: .gitignore  About.py  Introduction.py  README.md  app.py  db.py  pyproject.toml  utils.py
.streamlit/: config.toml
data/: example.csv  mdv_month.csv  mdv_year.csv
pages/: 100_Upload_Custom_Data.py  1_Facets.py  1_Load_Data.py  2_Facets (Time Series).py  2_Tree_Maps.py  3_Data_Table.py  3_Tree_Maps.py  4_Data_Table.py
templates/: timeseries.sql
