[tool.poetry]
name = "mtv-app"
version = "0.1.0"
description = ""
authors = ["Mark Ingham <mark.ingham@ly.st>"]
readme = "README.md"
packages = [{include = "mtv_app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydqt = "^1.0.1"
streamlit = "^1.28.2"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
