[tool.poetry]
name = "mtv-app"
version = "0.1.0"
description = ""
authors = ["Mark Ingham <mark.ingham@ly.st>"]
readme = "README.md"
packages = [{include = "mtv_app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.28.2"
plotly = "^5.18.0"
streamlit-extras = "^0.3.5"
streamlit-js-eval = "^0.1.5"
streamlit-sortables = "^0.2.0"
pydqt = "^1.0.3"
pip = "^23.3.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
